crates/tests/rust_snapshots/tests/snapshots/docx__showcase_02_docx_ir.snap
---
source: crates/tests/rust_snapshots/tests/docx.rs
expression: canonical_json(&json)
---
{
  "kind": "Docx",
  "properties": {
    "app": {
      "AppVersion": "15.0000",
      "Application": "LibreOffice/26.2.0.3$MacOSX_AARCH64 LibreOffice_project/afbbd0df0edb6d40b450b0337ac646b0913a760c",
      "Characters": "286",
      "CharactersWithSpaces": "323",
      "Pages": "1",
      "Paragraphs": "14",
      "Template": "Normal.dotm",
      "TotalTime": "0",
      "Words": "51"
    },
    "core": {
      "created": "2013-12-23T23:15:00Z",
      "creator": "python-docx",
      "description": "generated by python-docx",
      "language": "en-US",
      "modified": "2026-02-26T14:24:30Z",
      "revision": "2"
    },
    "custom": {}
  },
  "sections": [
    {
      "blocks": [
        {
          "Paragraph": {
            "inlines": [
              {
                "Text": "Quarterly Operations Summary"
              }
            ]
          }
        },
        {
          "Paragraph": {
            "inlines": [
              {
                "Text": "This fixture is used to demo DOCX extraction to IR (Intermediate Representation) and markdown."
              }
            ]
          }
        },
        {
          "Paragraph": {
            "inlines": [
              {
                "Text": "Please validate this sentence before publishing the report.[^c0]"
              }
            ]
          }
        },
        {
          "Table": {
            "caption": null,
            "headers": [
              "Col1",
              "Col2",
              "Col3"
            ],
            "rows": [
              [
                {
                  "content": [
                    {
                      "inlines": [
                        {
                          "Text": "Region"
                        }
                      ]
                    }
                  ]
                },
                {
                  "content": [
                    {
                      "inlines": [
                        {
                          "Text": "Revenue"
                        }
                      ]
                    }
                  ]
                },
                {
                  "content": [
                    {
                      "inlines": [
                        {
                          "Text": "Growth"
                        }
                      ]
                    }
                  ]
                }
              ],
              [
                {
                  "content": [
                    {
                      "inlines": [
                        {
                          "Text": "EMEA"
                        }
                      ]
                    }
                  ]
                },
                {
                  "content": [
                    {
                      "inlines": [
                        {
                          "Text": "$1300000"
                        }
                      ]
                    }
                  ]
                },
                {
                  "content": [
                    {
                      "inlines": [
                        {
                          "Text": "12%"
                        }
                      ]
                    }
                  ]
                }
              ],
              [
                {
                  "content": [
                    {
                      "inlines": [
                        {
                          "Text": "NA"
                        }
                      ]
                    }
                  ]
                },
                {
                  "content": [
                    {
                      "inlines": [
                        {
                          "Text": "$980000"
                        }
                      ]
                    }
                  ]
                },
                {
                  "content": [
                    {
                      "inlines": [
                        {
                          "Text": "9%"
                        }
                      ]
                    }
                  ]
                }
              ]
            ]
          }
        },
        {
          "Paragraph": {
            "inlines": [
              {
                "Text": "End of document. The parser should emit a body section and a header section."
              }
            ]
          }
        }
      ],
      "comments": [
        {
          "author": "Reviewer",
          "id": "c0",
          "text": "Example DOCX comment captured as markdown footnote."
        }
      ],
      "name": "body"
    },
    {
      "blocks": [],
      "comments": [],
      "name": "header1"
    },
    {
      "blocks": [
        {
          "Paragraph": {
            "inlines": [
              {
                "Text": "OOXML Showcase Header"
              }
            ]
          }
        }
      ],
      "comments": [],
      "name": "header2"
    },
    {
      "blocks": [
        {
          "Paragraph": {
            "inlines": [
              {
                "Text": "OOXML Showcase Header"
              }
            ]
          }
        }
      ],
      "comments": [],
      "name": "header3"
    }
  ],
  "sheets": [],
  "slides": []
}
