crates/tests/rust_snapshots/tests/snapshots/docx__showcase_02_docx_markdown.snap
---
source: crates/tests/rust_snapshots/tests/docx.rs
expression: normalize_markdown(&md)
---
<!-- officemd: kind=docx profile=compact first_row_as_header=true formulas=true headers_footers=true properties=false -->

## Section: body

Quarterly Operations Summary
This fixture is used to demo DOCX extraction to IR (Intermediate Representation) and markdown.
Please validate this sentence before publishing the report.[^c0]
| Region | Revenue | Growth |
| --- | --- | --- |
| EMEA | $1300000 | 12% |
| NA | $980000 | 9% |

End of document. The parser should emit a body section and a header section.
### Comments
[^c0|Reviewer]: Example DOCX comment captured as markdown footnote.


## Section: header1


## Section: header2

OOXML Showcase Header

## Section: header3

OOXML Showcase Header
