crates/tests/rust_snapshots/tests/snapshots/docx__showcase_docx_ir.snap
---
source: crates/tests/rust_snapshots/tests/docx.rs
expression: canonical_json(&json)
---
{
  "kind": "Docx",
  "properties": {
    "app": {
      "AppVersion": "14.0000",
      "Application": "Microsoft Macintosh Word",
      "Characters": "0",
      "CharactersWithSpaces": "0",
      "DocSecurity": "0",
      "HyperlinksChanged": "false",
      "Lines": "0",
      "LinksUpToDate": "false",
      "Pages": "1",
      "Paragraphs": "0",
      "ScaleCrop": "false",
      "SharedDoc": "false",
      "Template": "Normal.dotm",
      "TotalTime": "0",
      "Words": "0",
      "i4": "1",
      "lpstr": "Title"
    },
    "core": {
      "created": "2013-12-23T23:15:00Z",
      "creator": "python-docx",
      "description": "generated by python-docx",
      "modified": "2013-12-23T23:15:00Z",
      "revision": "1"
    },
    "custom": {}
  },
  "sections": [
    {
      "blocks": [
        {
          "Paragraph": {
            "inlines": [
              {
                "Text": "Quarterly Operations Summary"
              }
            ]
          }
        },
        {
          "Paragraph": {
            "inlines": [
              {
                "Text": "This fixture is used to demo DOCX extraction to IR and markdown."
              }
            ]
          }
        },
        {
          "Paragraph": {
            "inlines": [
              {
                "Text": "Please validate this sentence before publishing the report.[^c0]"
              }
            ]
          }
        },
        {
          "Table": {
            "caption": null,
            "headers": [
              "Col1",
              "Col2",
              "Col3"
            ],
            "rows": [
              [
                {
                  "content": [
                    {
                      "inlines": [
                        {
                          "Text": "Region"
                        }
                      ]
                    }
                  ]
                },
                {
                  "content": [
                    {
                      "inlines": [
                        {
                          "Text": "Revenue"
                        }
                      ]
                    }
                  ]
                },
                {
                  "content": [
                    {
                      "inlines": [
                        {
                          "Text": "Growth"
                        }
                      ]
                    }
                  ]
                }
              ],
              [
                {
                  "content": [
                    {
                      "inlines": [
                        {
                          "Text": "EMEA"
                        }
                      ]
                    }
                  ]
                },
                {
                  "content": [
                    {
                      "inlines": [
                        {
                          "Text": "$1200000"
                        }
                      ]
                    }
                  ]
                },
                {
                  "content": [
                    {
                      "inlines": [
                        {
                          "Text": "12%"
                        }
                      ]
                    }
                  ]
                }
              ],
              [
                {
                  "content": [
                    {
                      "inlines": [
                        {
                          "Text": "NA"
                        }
                      ]
                    }
                  ]
                },
                {
                  "content": [
                    {
                      "inlines": [
                        {
                          "Text": "$980000"
                        }
                      ]
                    }
                  ]
                },
                {
                  "content": [
                    {
                      "inlines": [
                        {
                          "Text": "8%"
                        }
                      ]
                    }
                  ]
                }
              ]
            ],
            "synthetic_headers": true
          }
        },
        {
          "Paragraph": {
            "inlines": [
              {
                "Text": "End of document. The parser should emit a body section and a header section."
              }
            ]
          }
        }
      ],
      "comments": [
        {
          "author": "Reviewer",
          "id": "c0",
          "text": "Example DOCX comment captured as markdown footnote."
        }
      ],
      "name": "body"
    },
    {
      "blocks": [
        {
          "Paragraph": {
            "inlines": [
              {
                "Text": "OOXML Showcase Header"
              }
            ]
          }
        }
      ],
      "comments": [],
      "name": "header1"
    }
  ],
  "sheets": [],
  "slides": []
}
