crates/tests/rust_snapshots/tests/snapshots/docx__showcase_docx_markdown.snap
---
source: crates/tests/rust_snapshots/tests/docx.rs
expression: normalize_markdown(&md)
---
<!-- officemd: kind=docx profile=compact first_row_as_header=true formulas=true headers_footers=true properties=false -->

## Section: body

Quarterly Operations Summary
This fixture is used to demo DOCX extraction to IR and markdown.
Please validate this sentence before publishing the report.[^c0]
| Region | Revenue | Growth |
| --- | --- | --- |
| EMEA | $1200000 | 12% |
| NA | $980000 | 8% |

End of document. The parser should emit a body section and a header section.
### Comments
[^c0|Reviewer]: Example DOCX comment captured as markdown footnote.


## Section: header1

OOXML Showcase Header
